--- a/qa-front/src/assets/styles/element-variables.scss
+++ b/qa-front/src/assets/styles/element-variables.scss
@@ -1,20 +1,19 @@
 /**
-* I think element-ui's default theme color is too light for long-term use.
-* So I modified the default color and you can modify it to your liking.
+* 自定义主题配色方案，采用现代化高级设计风格
 **/
 
 /* theme color */
-$--color-primary: #1890ff;
-$--color-success: #13ce66;
-$--color-warning: #ffba00;
-$--color-danger: #ff4949;
-// $--color-info: #1E1E1E;
+$--color-primary: #6c5ce7;
+$--color-success: #00b894;
+$--color-warning: #fdcb6e;
+$--color-danger: #d63031;
+$--color-info: #2d3436;
 
-$--button-font-weight: 400;
+$--button-font-weight: 500;
 
-// $--color-text-regular: #1f2d3d;
+$--color-text-regular: #2d3436;
 
-$--border-color-light: #dfe4ed;
+$--border-color-light: #dfe6e9;
 $--border-color-lighter: #e6ebf5;
 
 $--table-border: 1px solid #dfe6ec;
